tdf#135893 sw paste: fix copying fly frame in textbox twice

Regression from commit c7307c77254557646f33017af915f6808a861e29
(fdo#82191 sw::DocumentLayoutManager: copy textbox content of draw
formats, 2014-08-15), the problem is that the fly+draw format copies the
fly content recursively already, so when we would copy all special
formats of the document, the inner fly frame is copied twice.

This is normally not a problem for fly frames (where you can't select
multiple fly frames at the same time), nor a problem for draw frames
(which have no sw content), but it's a problem for the combination of
these, TextBoxes.

Fix the problem by ignoring fly frames which are anchored in such
TextBoxes: we do the same for fly frames which have an associated draw
format already.

Change-Id: I3376beb414f91abfa6f3f5640f825ccae34911c2