sw/qa/core/frmedt/frmedt.cxx
@@ -22,6 +22,7 @@
 #include <frameformats.hxx>
 #include <unotxdoc.hxx>
 #include <docsh.hxx>
+#include <swdtflvr.hxx>
 
 char const DATA_DIRECTORY[] = "/sw/qa/core/frmedt/data/";
 
@@ -107,6 +108,35 @@ CPPUNIT_TEST_FIXTURE(SwCoreFrmedtTest, testVertPosFromBottomBoundingBox)
     // i.e. UI did not allow anchoring a shape 10cm above the bottom of the page due to wrong
     // bounding box.
     CPPUNIT_ASSERT_EQUAL(-1 * nPagePrintAreaBottom, aBoundRect.Pos().getY());
+}
+
+CPPUNIT_TEST_FIXTURE(SwCoreFrmedtTest, testPasteFlyInTextBox)
+{
+    // Given a document that contains a textbox, which contains an sw image (fly frame)
+    load(DATA_DIRECTORY, "paste-fly-in-textbox.docx");
+    SwXTextDocument* pTextDoc = dynamic_cast<SwXTextDocument*>(mxComponent.get());
+    SwDocShell* pDocShell = pTextDoc->GetDocShell();
+    SwWrtShell* pWrtShell = pDocShell->GetWrtShell();
+    SwDoc* pDoc = pDocShell->GetDoc();
+    SdrPage* pPage = pDoc->getIDocumentDrawModelAccess().GetDrawModel()->GetPage(0);
+    SdrObject* pObject = pPage->GetObj(0);
+    pWrtShell->SelectObj(Point(), 0, pObject);
+    CPPUNIT_ASSERT_EQUAL(static_cast<size_t>(3), pDoc->GetSpzFrameFormats()->GetFormatCount());
+    rtl::Reference<SwTransferable> pTransfer = new SwTransferable(*pWrtShell);
+    pTransfer->Cut();
+    CPPUNIT_ASSERT_EQUAL(static_cast<size_t>(0), pDoc->GetSpzFrameFormats()->GetFormatCount());
+    TransferableDataHelper aHelper(pTransfer.get());
+
+    // When pasting that to an empty document.
+    SwTransferable::Paste(*pWrtShell, aHelper);
+
+    // Then we should have the image only once: 3 formats (draw+fly formats for the textbox and a
+    // fly format for the image).
+    // Without the accompanying fix in place, this test would have failed with:
+    // - Expected: 3
+    // - Actual  : 4
+    // i.e. the image was pasted twice.
+    CPPUNIT_ASSERT_EQUAL(static_cast<size_t>(3), pDoc->GetSpzFrameFormats()->GetFormatCount());
 }
 
 CPPUNIT_PLUGIN_IMPLEMENT();
